--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,11 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo one liner test
+      - name: Start the first test
+        run: echo test started
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Finish test
         run: |
-          echo first line of the multi line
-          echo second line of the multi line.
+          echo Test being conducted 
+          echo Test successful 😁.
