--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Start the first test
+      - namee: Start the first test
         run: echo test started
 
       # Runs a set of commands using the runners shell
