--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - namee: Start the first test
-        run: echo test started
+      - name: say hello
+        run: echo  "<h1> Hello </h1>" >> hello.html
 
       # Runs a set of commands using the runners shell
       - name: Finish test
